# enderpy

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  : Box<EnderpyFile>,  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  test.py  tsconfig.json  webpack.config.js
benchmark/: Cargo.toml
benchmark/benches/: parser_benchmark.rs  typecheck_benchmark.rs
benchmark/test_data/: types_very_fast.py
compat/: Cargo.toml  ast_python.py
compat/src/: lexer_compat.rs  main.rs  parser_compat.rs
enderpy/: Cargo.toml
enderpy/src/: cli.rs  main.rs
lsp/: Cargo.toml
lsp/src/: main.rs
parser/: Cargo.toml  ast_python.py  lex_python.py
parser/benches/: parser_benchmark.rs
parser/src/: ast.rs  error.rs  intern.rs  lib.rs  runpython.rs  token.rs  utils.rs
parser/src/lexer/: compat.rs  diagnostics.rs  fstring.rs  lexer.rs  mod.rs
parser/src/parser/: ast.rs  compat.rs  diagnostics.rs  error.rs  expression.rs  mod.rs  operator.rs  parser.rs  statement.rs  string.rs
parser/test_data/inputs/: annotated_assignment.py  binary_op.py  comments.py  for.py  from_import.py  functions.py  generator_expressions.py  if.py  indentation.py  input_program.py  lists.py  newlines.py  separate_statements.py  sets.py  string.py  subscript.py  try.py  type_alias.py
parser/test_data/output/: enderpy_python_parser__lexer__tests__snapshot_test_lexer-10.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-100.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-101.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-102.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-103.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-104.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-105.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-106.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-107.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-108.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-109.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-11.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-110.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-111.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-112.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-113.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-114.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-115.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-116.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-117.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-118.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-119.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-12.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-120.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-121.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-122.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-123.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-124.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-125.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-126.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-127.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-128.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-129.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-13.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-130.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-131.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-132.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-133.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-134.snap  enderpy_python_parser__lexer__tests__snapshot_test_lexer-135.snap  (+474 more)
ruff_python_import_resolver/: Cargo.toml
ruff_python_import_resolver/src/: execution_environment.rs  host.rs  implicit_imports.rs  import_result.rs  lib.rs  resolver.rs
typechecker/: Cargo.toml
typechecker/src/: ast_visitor.rs  ast_visitor_generic.rs  ast_visitor_immut.rs  build.rs  build_error.rs  build_source.rs  checker.rs  diagnostic.rs  error.rs  errors.rs  file.rs  lib.rs  nodes.rs  pre_analysis.rs  project.rs  semanal_utils.rs  semantic_analyzer.rs  settings.rs  state.rs  symbol_table.rs  type_evaluator.rs  types.rs
typechecker/src/ruff_python_import_resolver/: config.rs  execution_environment.rs  host.rs  implicit_imports.rs  import_result.rs  mod.rs  module_descriptor.rs  native_module.rs  python_platform.rs  python_version.rs  resolver.rs  search.rs
typechecker/src/snapshots/: typechecker__build__tests__assign_stmt-2.snap  typechecker__build__tests__assign_stmt-3.snap  typechecker__build__tests__assign_stmt-4.snap  typechecker__build__tests__assign_stmt-5.snap  typechecker__build__tests__assign_stmt-6.snap  typechecker__build__tests__assign_stmt.snap  typechecker__build__tests__class_def.snap  typechecker__build__tests__create_symbol_table.snap  typechecker__build__tests__function_def_symbols.snap
typechecker/src/type_check/: .type_evaluator.rs.rustfmt  builtins.rs  checker.rs  mod.rs  rules.rs  type_evaluator.rs  type_inference.rs  types.rs
typechecker/test_data/inputs/: base.py  basic_generics.py  basic_types.py  literal.py  never.py  test_undefined_name.py  type_check_call.py  type_check_undefined.py  type_check_var.py
typechecker/test_data/output/: enderpy_python_type_checker__build__tests__symbol_table@basic_generics.py.snap  enderpy_python_type_checker__build__tests__symbol_table@basic_types.py.snap  enderpy_python_type_checker__build__tests__symbol_table@class_definition.py.snap  enderpy_python_type_checker__build__tests__symbol_table@function_definition.py.snap  enderpy_python_type_checker__build__tests__symbol_table@imports.py.snap  enderpy_python_type_checker__build__tests__symbol_table@simple_var_assignment.py.snap  (+40 more)
(+1732 files in other folders)
