[workspace]
members = ["parser", "enderpy", "typechecker", "lsp"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.72.0"
homepage = "https://github.com/Glyphack/enderpy"
documentation = "https://github.com/Glyphack/enderpy"
authors = ["Shaygan Hooshyari"]
license = "AGPL-3.0-only"
repository = "https://github.com/Glyphack/enderpy"

[workspace.dependencies]
log = { version = "0.4.17" }
serde = { version = "1.0.152", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
insta = { version = "1.38.0", features = ["filters", "glob"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
