[package]
name = "enderpy_benchmark"
description = "Enderpy Benchmarks"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
codspeed-criterion-compat = { workspace = true, optional = true}
criterion.workspace = true
reqwest = { version= "0.12.4", features = ["blocking"] }
tokio.workspace = true

enderpy_python_parser = { path = "../parser" , version = "0.1.0" }

[dev-dependencies]

[lib]
bench = false
doctest = false

[[bench]]
name = "parser_benchmark"
harness = false

[features]
codspeed = ["codspeed-criterion-compat"]
