[package]
name = "enderpy-compat"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
enderpy_python_parser = { path = "../parser"}
serde_json = "1.0.128"
serde = "1.0.209"
miette.workspace = true
tabled = "0.16"
terminal_size = "0.3"
assert-json-diff = "2.0"
pretty_assertions = "1.4"
which = "6.0.3"
reqwest.workspace = true
zip = "2.2"
