[package]
name = "enderpy-lsp"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[dependencies]
enderpy_python_type_checker = { path = "../typechecker" , version = "0.1.0"}
enderpy_python_parser = { path = "../parser" , version = "0.1.0"}
env_logger = "0.9.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
