[package]
name = "enderpy-lsp"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[dependencies]
enderpy_python_type_checker = { path = "../typechecker" , version = "0.1.0"}
enderpy_python_parser = { path = "../parser" , version = "0.1.0"}
env_logger = "0.9.3"
serde_json = "1.0.78"
tokio.workspace = true
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap.workspace = true
log.workspace = true
im-rc = "15.0.0"
