[package]
name = "enderpy_python_parser"
description = "A Python parser written in Rust"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-id-start = "1.0.3"
miette = "5.6.0"
thiserror = "1.0.40"

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
