[package]
name = "enderpy_python_parser"
description = "A Python parser written in Rust"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-id-start = "1.0.3"
miette = { version = "5.6.0", features = ["fancy"] }
thiserror = "1.0.40"
is-macro = "0.3.5"
which = "6.0.1"
unicode-width = "0.1"

[dev-dependencies]
codspeed-criterion-compat.workspace = true
criterion.workspace = true
insta.workspace = true
reqwest = { version= "0.12.4", features = ["blocking"] }
tokio.workspace = true
tabled = "0.15"
terminal_size = "0.3"

[lib]
bench = false
