[package]
name = "ruff_python_resolver"
version = "0.0.0"
description = "Mirror of Python module resolver for Ruff. Do not use this I don't own the code."
edition = "2021"

[dependencies]
log = { workspace = true }

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.6.0"
insta = { workspace = true }
