[package]
name = "enderpy_python_type_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
enderpy_python_parser = { path = "../parser", version = "0.1.0" }
config = "0.13.3"
serde.workspace = true
miette.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger = "0.10.0"
tempfile = "3.8.0"
is-macro = "0.3.5"
bitflags = "2.4.2"
dashmap = "5.5.3"

[dev-dependencies]
insta.workspace = true
